spectec/test/elab/neg/type-extend-forward-decl.t
  $ ./main.exe type-extend-forward-decl.spectec 2>&1
  error: cannot extend an incomplete type
    --> type-extend-forward-decl.spectec:7:5
    |
  7 |   | incomplete
    |     ^^^^^^^^^^
    = source: elab
  [1]
